Fixed Layout Issues and Added Portfolio Work
– Fixed layout issues with the above the fold header and portfolio work
pieces
– Added new client portfolio work

--- a/css/styles.css
+++ b/css/styles.css
@@ -119,7 +119,7 @@ section h1,.intro p{margin-bottom: 0; }
 .member{margin-bottom: 2em;min-height: 230px;}
 .member:last-child{margin-bottom: 0em;}
 .member h5{margin-top: 1em;margin-bottom: 0;font-size: 1.125em;}
-.member p{margin-bottom: 0;font-size: 0.75em;}
+.member p{width:373px;margin-bottom: 0;font-size: 0.75em;}
 
 .member-photo{position:relative; overflow: hidden; margin-bottom: 1.8em;background: #000;}
 .member-photo img{width: 100%;display:block;margin: 0 auto;}
@@ -356,7 +356,7 @@ footer hr{margin:0; margin-bottom:2em;border-bottom:1px solid #cccccc;}
 	
 	/* Header */
 	
-	#logo img{width:400px;}
+	#logo img{width:300px;}
 
 	#intro h1{margin-top: 1.25em;font-size: 3em;}
 	#intro h2{font-size: 2.5em;}
